updated dance cards

--- a/index.html
+++ b/index.html
@@ -39,22 +39,12 @@
             <img class="relative w-[78.6px] h-[77.9px] object-contain" alt="" src="/public/globe.svg" />
 
             <div class="relative leading-[40px] flex items-center h-fit shrink-0">
-              <a href="index.html" class="w-full no-underline cursor-pointer text-colors-black-100 tracking-[-3.2px]">
+              <a href="index.html" class="w-full no-underline text-colors-black-100 tracking-[-3.2px]">
                 Medini Chopra
               </a>
             </div>
           </div>
           <div class="shrink-0 flex flex-row items-center justify-center gap-[30px] text-center text-[20px] font-inter">
-            <!-- <a
-                class="relative font-medium  transition-all no-underline hover:underline hover:text-mediumaquamarine text-[inherit]"
-                href="sectionAbout.html"
-                >About</a
-              >
-              <a
-                class="relative  font-medium transition-all no-underline hover:underline hover:text-mediumaquamarine text-[inherit]"
-                href="#"
-                >Document</a
-              > -->
             <div class="relative group">
               <a href="about.html"
                 class="inline-block text-black no-underline transition-colors duration-300 ease-in-out group-hover:text-[#7A5C91]">About</a>
@@ -73,6 +63,7 @@
             </div>
           </div>
         </header>
+
         <section
           class="relative w-full lg:w-[1197px] h-96 lg:h-[570px] -mt-4 flex flex-col items-center justify-center text-center text-[70px] text-colors-black-100 font-inter"
           id="homepage">
@@ -161,31 +152,45 @@
           <!-- TESTING PROJECT CARD -->
           <a href="https://drive.google.com/file/d/1f_nC7QIS-K0g0MqgFR0_c3pp1QBwS5Ix/view" target="_blank"
             rel="noopener" id="openTicketModal"
-            class="openNotionModal no-underline max-w-xs md:max-w-sm lg:max-w-3xl text-black w-full !cursor-pointer bg-white overflow-hidden flex flex-col items-start justify-start p-8 lg:py-[50px] lg:px-[33px] gap-[21px] border-[1px] border-solid border-lightgray">
+            class="openNotionModal no-underline max-w-xs md:max-w-sm lg:max-w-3xl text-black w-full bg-white overflow-hidden flex flex-col items-start justify-start p-8 lg:py-[50px] lg:px-[33px] gap-[21px] border-[1px] border-solid border-lightgray">
 
-            <div class="relative !cursor-pointer w-full max-w-sm lg:max-w-xl lg:w-[527px] h-[174px]">
+            <div class="relative w-full max-w-sm lg:max-w-xl lg:w-[527px] h-[174px] project-image">
               <img
-                class="absolute !cursor-pointer h-full w-full top-[0%] right-[0%] bottom-[0%] left-[0%] max-w-full overflow-hidden max-h-full object-cover"
+                class="absolute h-full w-full top-[0%] right-[0%] bottom-[0%] left-[0%] max-w-full overflow-hidden max-h-full object-cover"
                 alt="" src="/public/resonance.png" />
             </div>
-            <div class="shrink-0 flex flex-col !cursor-pointer items-start justify-start gap-[11px]">
-              <b class="relative !cursor-pointer tracking-[0.3px] leading-[1.2]">Resonance</b>
+            <div class="shrink-0 flex flex-col items-start justify-start gap-[11px] project-title">
+              <b class="relative tracking-[0.3px] leading-[1.2]">Resonance</b>
             </div>
-
-            <!-- Descriptive text last -->
-            <div class="relative text-base !cursor-pointer tracking-[0.5px] leading-[26.44px] font-inter">
-              <p class="m-0 !cursor-pointer">
-                AI-agent for generating context-based
-              </p>
-              <p class="m-0 !cursor-pointer">playlists given a natural language user input</p>
-              <p class="m-0 !cursor-pointer">
-              of their current task or mood!
+            <div class="relative text-base tracking-[0.5px] leading-[26.44px] font-inter project-description">
+              <p class="m-0">AI-agent for generating context-based</p>
+              <p class="m-0">playlists given a natural language user input</p>
+              <p class="m-0">of their current task or mood!
               </p>
             </div>
           </a>
+          <!-- testing hover of second big one -->
+            <a href="https://medinichopra.notion.site/Google-Pay-Redesign-2ae47c2529734c4e80116d38a1b6efc1"
+              target="_blank" rel="noopener" id="openTicketModal"
+              class="openNotionModal no-underline max-w-xs md:max-w-sm lg:max-w-3xl text-black w-full bg-white overflow-hidden flex flex-col items-start justify-start p-8 lg:py-[50px] lg:px-[33px] gap-[21px] border-[1px] border-solid border-lightgray">
+          
+              <div class="relative w-full max-w-sm lg:max-w-xl lg:w-[527px] h-[174px] project-image">
+                <img
+                  class="absolute h-full w-full top-[0%] right-[0%] bottom-[0%] left-[0%] max-w-full overflow-hidden max-h-full object-cover"
+                  alt="" src="/public/gpay.png" />
+              </div>
+              <div class="shrink-0 flex flex-col items-start justify-start gap-0 project-title">
+                <b class="relative tracking-[0.3px] leading-[1.2]">Google Pay Redesign</b>
+              </div>
+              <div class="relative text-base tracking-[0.5px] leading-[26.44px] font-inter project-description">
+                <p class="m-0">User Interface revamp for Google Pay to make it more</p>
+                <p class="m-0">accessible to low-income merchant in India</p>
+                <p class="m-0">and prevent financial scams.</p>
+              </div>
+            </a>
 
           <!-- SECOND BIG ONE -->
-          <a href="https://medinichopra.notion.site/Google-Pay-Redesign-2ae47c2529734c4e80116d38a1b6efc1"
+          <!-- <a href="https://medinichopra.notion.site/Google-Pay-Redesign-2ae47c2529734c4e80116d38a1b6efc1"
             target="_blank" rel="noopener" id="openTicketModal"
             class="openNotionModal no-underline max-w-xs md:max-w-sm lg:max-w-3xl text-black w-full !cursor-pointer bg-white overflow-hidden flex flex-col items-start justify-start p-8 lg:py-[50px] lg:px-[33px] gap-[21px] border-[1px] border-solid border-lightgray">
 
@@ -202,8 +207,8 @@
               <p class="m-0 !cursor-pointer">accessible to low-income merchant in India</p>
               <p class="m-0 !cursor-pointer">and prevent financial scams.</p>
             </div>
-          </a>
-        </div>
+          </a> -->
+        </div> 
 
         <div class="w-full shrink-0 flex flex-col gap-8 lg:gap-0 lg:flex-row items-center justify-between text-5xl">
           <a href="https://drive.google.com/file/d/1uhOkIeETsgcgcdBRx-dgTD7oTUmaUvsk/view?usp=sharing" target="_blank"
@@ -350,28 +355,29 @@
         id="codes">
         <div
           class="shrink-0 flex flex-col lg:flex-row items-start justify-start p-2.5 gap-8 scale-90 lg:scale-95 xl:scale-100 xl:gap-10">
-          <div
-            class="openMultiplayerVideoModal rounded-[20.03px] [background:linear-gradient(180deg,_#effffa,_#effffa)] shadow-[0px_4px_4px_rgba(0,_0,_0,_0.25)] box-border h-[453px] overflow-hidden flex flex-col items-center justify-between py-[26px] px-[22px] relative border-[1px] border-solid border-lightgray">
-            <iframe width="349" height="247" src="https://www.youtube.com/embed/gJjOwlU63nc?si=JhsZxLSXCRcrXLlx"
-              title="YouTube video player" frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen class="rounded-xl"></iframe>
-            </iframe>
-            <div class="h-[119px] shrink-0 flex flex-col items-start justify-center gap-[11px] z-[1]">
-              <b class="relative tracking-[0.3px] leading-[27.4px]">A Celebration of Kathak</b>
-              <div class="relative text-base tracking-[0.5px] leading-[26.44px]">
-                <p class="m-0">Stillness & movement, power & grace, rhythm</p>
+          
+        <div
+          class="openMultiplayerVideoModal box-border h-[453px] overflow-hidden flex flex-col items-center justify-between py-[26px] px-[22px] relative border-[1px] border-solid border-lightgray bg-white">
+          <iframe width="349" height="247" src="https://www.youtube.com/embed/gJjOwlU63nc?si=JhsZxLSXCRcrXLlx"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+          <div class="h-[119px] shrink-0 flex flex-col items-start justify-center gap-[11px] z-[1]">
+            <b class="relative tracking-[0.3px] leading-[27.4px]">A Celebration of Kathak</b>
+            <div class="relative text-base tracking-[0.5px] leading-[26.44px]">
+              <p class="m-0">Stillness & movement, power & grace, rhythm</p>
                 <p class="m-0"> & silence: translated into visual </p>
                 <p class="m-0">geometries and the sculpting of space.</p>
-              </div>
             </div>
           </div>
+        </div>
+
           <div
-            class="openMultiplayerVideoModal rounded-[20.03px] [background:linear-gradient(180deg,_#effffa,_#effffa)] shadow-[0px_4px_4px_rgba(0,_0,_0,_0.25)] box-border h-[453px] overflow-hidden flex flex-col items-center justify-between py-[26px] px-[22px] relative border-[1px] border-solid border-lightgray">
+            class="openMultiplayerVideoModal box-border h-[453px] overflow-hidden flex flex-col items-center justify-between py-[26px] px-[22px] relative border-[1px] border-solid border-lightgray bg-white">
             <iframe width="349" height="247" src="https://www.youtube.com/embed/RCTwQQrqNGo?si=f5G8ZiXOWd5KeMxD"
               title="YouTube video player" frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen class="rounded-xl"></iframe>
+              allowfullscreen></iframe>
             <div class="h-[119px] shrink-0 flex flex-col items-start justify-center gap-[11px] z-[1]">
               <b class="relative tracking-[0.3px] leading-[27.4px]">An Acapella With Bodies</b>
               <div class="relative text-base tracking-[0.5px] leading-[26.44px]">
@@ -380,19 +386,14 @@
                 <p class="m-0">followed by a fusion of 4 dance forms.</p>
               </div>
             </div>
-            <!-- <img
-                class="absolute my-0 mx-[!important] top-[calc(50%_-_146.5px)] left-[calc(50%_-_64.5px)] w-[109px] h-[109px] object-cover z-[2]"
-                alt=""
-                src="/public/frame-Play-btn@2x.png"
-              /> -->
           </div>
+
           <div
-            class="openMultiplayerVideoModal rounded-[20.03px] [background:linear-gradient(180deg,_#effffa,_#effffa)] shadow-[0px_4px_4px_rgba(0,_0,_0,_0.25)] box-border h-[453px] overflow-hidden flex flex-col items-center justify-between py-[26px] px-[22px] relative border-[1px] border-solid border-lightgray">
+            class="openMultiplayerVideoModal box-border h-[453px] overflow-hidden flex flex-col items-center justify-between py-[26px] px-[22px] relative border-[1px] border-solid border-lightgray bg-white">
             <iframe width="349" height="247" src="https://www.youtube.com/embed/-KRDuXOqIcc?si=O1P6Vnu7SxbsNOqr"
               title="YouTube video player" frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen class="rounded-xl">
-            </iframe>
+              allowfullscreen></iframe>
             <div class="h-[119px] shrink-0 flex flex-col items-start justify-center gap-[11px] z-[1]">
               <b class="relative tracking-[0.3px] leading-[27.4px]">Two Rivers of Movement</b>
               <div class="relative text-base tracking-[0.5px] leading-[26.44px]">
@@ -401,13 +402,8 @@
                 <p class="m-0"> bodies come together?</p>
               </div>
             </div>
-            <!-- trying some stuff here -->
-            <!-- <img
-                class="absolute my-0 mx-[!important] top-[calc(50%_-_146.5px)] left-[calc(50%_-_64.5px)] w-[109px] h-[109px] object-cover z-[2]"
-                alt=""
-                src="/public/frame-Play-btn@2x.png"
-              /> -->
           </div>
+
         </div>
         <a href="#page1"
           class="shrink-0 flex flex-row items-center justify-start p-1.5 gap-[7px] text-[20px] text-colors-black-100 font-inter">
@@ -420,12 +416,6 @@
     </div>
   </div>
 
-  <!-- <button
-      id="closeModals"
-      class="fixed top-[10%] right-1/2 z-10 px-4 py-2 bg-red-500 text-white rounded"
-    >
-      Close Modals
-    </button> -->
   <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="800">
     <defs>
       <filter id="goo">
@@ -467,104 +457,6 @@
     }, 100);
   });
 
-  // Ticket Modal
-  // document
-  //   .getElementById("openTicketModal")
-  //   .addEventListener("click", function () {
-  //     document.getElementById("ticketModal").classList.remove("hidden");
-  //   });
-
-  // document
-  //   .getElementById("ticketModal")
-  //   .addEventListener("click", function (e) {
-  //     if (e.target.id === "ticketModal") {
-  //       document.getElementById("ticketModal").classList.add("hidden");
-  //     }
-  //   });
-
-  // Multiplayer Modals
-  // Select all buttons with the class "openMultiplayerModal"
-  // const multiplayerButtons = document.getElementsByClassName(
-  //   "openMultiplayerModal"
-  // );
-
-  // // Select the modal with the id "multiplayerModal"
-  // const multiplayerModal = document.getElementById("multiplayerModal");
-
-  // // Loop through all multiplayerButtons and add an event listener to each
-  // for (let i = 0; i < multiplayerButtons.length; i++) {
-  //   multiplayerButtons[i].addEventListener("click", function () {
-  //     // Toggle the modal
-  //     multiplayerModal.classList.toggle("hidden");
-  //   });
-  // }
-
-  // // Add an event listener to the multiplayerModal for closing it when clicking outside of it
-  // multiplayerModal.addEventListener("click", function (e) {
-  //   if (e.target === multiplayerModal) {
-  //     multiplayerModal.classList.add("hidden");
-  //   }
-  // });
-
-  // // Configure modal
-  // const configureModal = document.getElementById("configureModal");
-  // const configureButtons =
-  //   document.getElementsByClassName("openConfigureModal");
-  // for (let i = 0; i < configureButtons.length; i++) {
-  //   configureButtons[i].addEventListener("click", function () {
-  //     configureModal.classList.remove("hidden");
-  //   });
-  // }
-
-  // configureModal.addEventListener("click", function (e) {
-  //   if (e.target === configureModal) {
-  //     configureModal.classList.add("hidden");
-  //   }
-  // });
-
-  // // Multiplayer Video modal
-  // const multiplayerVideoModal = document.getElementById(
-  //   "multiplayerVideoModal"
-  // );
-  // const multiplayerVideoButtons = document.getElementsByClassName(
-  //   "openMultiplayerVideoModal"
-  // );
-
-  // for (let i = 0; i < multiplayerVideoButtons.length; i++) {
-  //   multiplayerVideoButtons[i].addEventListener("click", function () {
-  //     multiplayerVideoModal.classList.toggle("hidden");
-  //   });
-  // }
-
-  // multiplayerVideoModal.addEventListener("click", function (e) {
-  //   if (e.target === multiplayerVideoModal) {
-  //     multiplayerVideoModal.classList.add("hidden");
-  //   }
-  // });
-
-  // Notion Modal
-  // const notionModal = document.getElementById("notionModal");
-  // const notionButtons = document.getElementsByClassName("openNotionModal");
-  // const closeNotionModal = document.getElementById("closeNotionModal");
-  // for (let i = 0; i < notionButtons.length; i++) {
-  //   notionButtons[i].addEventListener("click", function () {
-  //     window.open(
-  //       "https://drive.google.com/file/d/1uhOkIeETsgcgcdBRx-dgTD7oTUmaUvsk/view",
-  //       "_blank"
-  //     );
-  //   });
-  // }
-
-  // notionModal.addEventListener("click", function (e) {
-  //   if (e.target === notionModal) {
-  //     notionModal.classList.add("hidden");
-  //   }
-
-  // });
-
-  // closeNotionModal.addEventListener("click", function () {
-  //   notionModal.classList.add("hidden");
-  // });
 </script>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script>
