--- a/index.html
+++ b/index.html
@@ -213,53 +213,53 @@
         <div class="w-full shrink-0 flex flex-col gap-8 lg:gap-0 lg:flex-row items-center justify-between text-5xl">
           <a href="https://drive.google.com/file/d/1uhOkIeETsgcgcdBRx-dgTD7oTUmaUvsk/view?usp=sharing" target="_blank"
             rel="noopener"
-            class="openNotionModal no-underline text-black !cursor-pointer openMultiplayerModal bg-white overflow-hidden flex flex-col items-start justify-start py-[25px] px-[22px] gap-[25px] border-[1px] border-solid border-lightgray">
-            <div class="relative !cursor-pointer w-[349px] h-[158px]">
+            class="openNotionModal no-underline text-black openMultiplayerModal bg-white overflow-hidden flex flex-col items-start justify-start py-[25px] px-[22px] gap-[25px] border-[1px] border-solid border-lightgray">
+            <div class="relative w-[349px] h-[158px]">
               <img
-                class="absolute !cursor-pointer h-full w-full top-[0%] right-[0%] bottom-[0%] left-[0%] max-w-full overflow-hidden max-h-full object-cover"
+                class="absolute h-full w-full top-[0%] right-[0%] bottom-[0%] left-[0%] max-w-full overflow-hidden max-h-full object-cover"
                 alt="" src="/public/reddit.png" />
             </div>
-            <div class="shrink-0 flex flex-col items-start !cursor-pointer justify-center gap-0">
-              <b class="relative !cursor-pointer tracking-[0.3px] leading-[27.4px] m-0 p-0">
+            <div class="shrink-0 flex flex-col items-start justify-center gap-0">
+              <b class="relative tracking-[0.3px] leading-[27.4px] m-0 p-0">
                 Reddit Analysis
               </b>
             </div>
-            <div class="relative text-base tracking-[0.5px] !cursor-pointer leading-[26.44px] font-inter m-0 p-0">
-              <p class="m-0 p-0 !cursor-pointer">Is r/askEngineers more toxic than</p>
-              <p class="m-0 p-0 !cursor-pointer">r/askWomenEngineers?</p>
+            <div class="relative text-base tracking-[0.5px] leading-[26.44px] font-inter m-0 p-0">
+              <p class="m-0 p-0">Is r/askEngineers more toxic than</p>
+              <p class="m-0 p-0">r/askWomenEngineers?</p>
             </div>
           </a>
           <a href="https://drive.google.com/file/d/1wIFXM52qYWoRnYQj5uzDINO7x7HeIsuk/view" target="_blank"
             rel="noopener"
-            class="openNotionModal no-underline text-black !cursor-pointer openMultiplayerModal bg-white overflow-hidden flex flex-col items-start justify-start py-[25px] px-[22px] gap-[25px] border-[1px] border-solid border-lightgray">
-            <div class="relative !cursor-pointer w-[349px] h-[158px]">
+            class="openNotionModal no-underline text-black openMultiplayerModal bg-white overflow-hidden flex flex-col items-start justify-start py-[25px] px-[22px] gap-[25px] border-[1px] border-solid border-lightgray">
+            <div class="relative w-[349px] h-[158px]">
               <img
-                class="absolute !cursor-pointer h-full w-full top-[0%] right-[0%] bottom-[0%] left-[0%] max-w-full overflow-hidden max-h-full object-cover"
+                class="absolute h-full w-full top-[0%] right-[0%] bottom-[0%] left-[0%] max-w-full overflow-hidden max-h-full object-cover"
                 alt="" src="/public/amr.jpeg" />
             </div>
-            <div class="shrink-0 flex flex-col items-start !cursor-pointer justify-center gap-[11px]">
-              <b class="relative !cursor-pointer tracking-[0.3px] leading-[27.4px]">Visualize AMR</b>
+            <div class="shrink-0 flex flex-col items-start justify-center gap-[11px]">
+              <b class="relative tracking-[0.3px] leading-[27.4px]">Visualize AMR</b>
             </div>
-            <div class="relative text-base tracking-[0.5px] !cursor-pointer leading-[26.44px] font-inter">
-              <p class="m-0 !cursor-pointer">Interactive web application to graph </p>
-              <p class="m-0 !cursor-pointer">antimicrobial resistance trends.</p>
+            <div class="relative text-base tracking-[0.5px] leading-[26.44px] font-inter">
+              <p class="m-0">Interactive web application to graph </p>
+              <p class="m-0">antimicrobial resistance trends.</p>
             </div>
           </a>
 
           <a href="https://medinichopra.notion.site/4031-574d8ecba3b043d8b82cf7edf808b051?pvs=74" target="_blank"
             rel="noopener"
-            class="openNotionModal no-underline text-black !cursor-pointer openMultiplayerModal bg-white overflow-hidden flex flex-col items-start justify-start py-[25px] px-[22px] gap-[25px] border-[1px] border-solid border-lightgray">
-            <div class="relative !cursor-pointer w-[349px] h-[158px]">
+            class="openNotionModal no-underline text-black openMultiplayerModal bg-white overflow-hidden flex flex-col items-start justify-start py-[25px] px-[22px] gap-[25px] border-[1px] border-solid border-lightgray">
+            <div class="relative w-[349px] h-[158px]">
               <img
-                class="absolute !cursor-pointer h-full w-full top-[0%] right-[0%] bottom-[0%] left-[0%] max-w-full overflow-hidden max-h-full object-cover"
+                class="absolute h-full w-full top-[0%] right-[0%] bottom-[0%] left-[0%] max-w-full overflow-hidden max-h-full object-cover"
                 alt="" src="/public/cube.jpg" />
             </div>
-            <div class="shrink-0 flex flex-col items-start !cursor-pointer justify-center gap-[11px]">
-              <b class="relative !cursor-pointer tracking-[0.3px] leading-[27.4px]">Interactive Art</b>
+            <div class="shrink-0 flex flex-col items-start justify-center gap-[11px]">
+              <b class="relative tracking-[0.3px] leading-[27.4px]">Interactive Art</b>
             </div>
-            <div class="relative text-base tracking-[0.5px] !cursor-pointer leading-[26.44px] font-inter">
-              <p class="m-0 !cursor-pointer">Immersive proof-of-concept with a glass</p>
-              <p class="m-0 !cursor-pointer">cube, generative art and performance.</p>
+            <div class="relative text-base tracking-[0.5px] leading-[26.44px] font-inter">
+              <p class="m-0">Immersive proof-of-concept with a glass</p>
+              <p class="m-0">cube, generative art and performance.</p>
             </div>
           </a>
         </div>
@@ -269,66 +269,66 @@
         <div class="w-full shrink-0 flex flex-col gap-8 lg:gap-0 lg:flex-row items-center justify-between text-5xl">
           <a href="https://medinichopra.notion.site/medinichopra/tihai-99ed48d6c10d4acfa361a3f3e05a4d2a" target="_blank"
             rel="noopener"
-            class="openNotionModal no-underline text-black !cursor-pointer openMultiplayerModal bg-white overflow-hidden flex flex-col items-start justify-start py-[25px] px-[22px] gap-[25px] border-[1px] border-solid border-lightgray">
-            <div class="relative !cursor-pointer w-[349px] h-[158px]">
+            class="openNotionModal no-underline text-black openMultiplayerModal bg-white overflow-hidden flex flex-col items-start justify-start py-[25px] px-[22px] gap-[25px] border-[1px] border-solid border-lightgray">
+            <div class="relative w-[349px] h-[158px]">
               <img
-                class="absolute !cursor-pointer h-full w-full top-[0%] right-[0%] bottom-[0%] left-[0%] max-w-full overflow-hidden max-h-full object-cover"
+                class="absolute h-full w-full top-[0%] right-[0%] bottom-[0%] left-[0%] max-w-full overflow-hidden max-h-full object-cover"
                 alt="" src="/public/musicians.png" />
             </div>
-            <div class="shrink-0 flex flex-col items-start !cursor-pointer justify-center gap-[11px]">
-              <b class="relative !cursor-pointer tracking-[0.3px] leading-[27.4px]">
+            <div class="shrink-0 flex flex-col items-start justify-center gap-[11px]">
+              <b class="relative tracking-[0.3px] leading-[27.4px]">
                 Tihai
               </b>
             </div>
-            <div class="relative text-base tracking-[0.5px] !cursor-pointer leading-[26.44px] font-inter m-0 p-0">
-              <p class="m-0 !cursor-pointer">
+            <div class="relative text-base tracking-[0.5px] leading-[26.44px] font-inter m-0 p-0">
+              <p class="m-0">
                 Generate a rhythmic pattern found</p>
-              <p class="m-0 !cursor-pointer">
+              <p class="m-0">
                 in Hindustani classical music
               </p>
-              <p class="m-0 !cursor-pointer">
+              <p class="m-0">
                 and help dancers choreograph better!
               </p>
             </div>
           </a>
           <a href="https://medinichopra.notion.site/medinichopra/rasa-142ad643875342f68a8660a02829c554" target="_blank"
             rel="noopener"
-            class="openNotionModal no-underline text-black !cursor-pointer openMultiplayerModal bg-white overflow-hidden flex flex-col items-start justify-start py-[25px] px-[22px] gap-[25px] border-[1px] border-solid border-lightgray">
-            <div class="relative !cursor-pointer w-[349px] h-[158px]">
+            class="openNotionModal no-underline text-black openMultiplayerModal bg-white overflow-hidden flex flex-col items-start justify-start py-[25px] px-[22px] gap-[25px] border-[1px] border-solid border-lightgray">
+            <div class="relative w-[349px] h-[158px]">
               <img
-                class="absolute !cursor-pointer h-full w-full top-[0%] right-[0%] bottom-[0%] left-[0%] max-w-full overflow-hidden max-h-full object-cover"
+                class="absolute h-full w-full top-[0%] right-[0%] bottom-[0%] left-[0%] max-w-full overflow-hidden max-h-full object-cover"
                 alt="" src="/public/indian art.jpg" />
             </div>
-            <div class="shrink-0 flex flex-col items-start !cursor-pointer justify-center gap-[11px]">
-              <b class="relative !cursor-pointer tracking-[0.3px] leading-[27.4px]">Rasa</b>
+            <div class="shrink-0 flex flex-col items-start justify-center gap-[11px]">
+              <b class="relative tracking-[0.3px] leading-[27.4px]">Rasa</b>
             </div>
-            <div class="relative text-base tracking-[0.5px] !cursor-pointer leading-[26.44px] font-inter">
-              <p class="m-0 !cursor-pointer">
+            <div class="relative text-base tracking-[0.5px] leading-[26.44px] font-inter">
+              <p class="m-0">
                 Convolutional neural network identifying
               </p>
-              <p class="m-0 !cursor-pointer">
+              <p class="m-0">
                 the emotion of a given Indian painting
               </p>
-              <p class="m-0 !cursor-pointer">
+              <p class="m-0">
                 based on Eastern Aesthetics theories.
               </p>
             </div>
           </a>
           <a href="https://medinichopra.notion.site/medinichopra/Tiny-Tech-Tales-c328e70ce40d4a4a82fc4bdecbb39e4b"
             target="_blank" rel="noopener"
-            class="openNotionModal no-underline text-black !cursor-pointer openMultiplayerModal bg-white overflow-hidden flex flex-col items-start justify-start py-[25px] px-[22px] gap-[25px] border-[1px] border-solid border-lightgray">
-            <div class="relative !cursor-pointer w-[349px] h-[158px]">
+            class="openNotionModal no-underline text-black openMultiplayerModal bg-white overflow-hidden flex flex-col items-start justify-start py-[25px] px-[22px] gap-[25px] border-[1px] border-solid border-lightgray">
+            <div class="relative w-[349px] h-[158px]">
               <img
-                class="absolute !cursor-pointer h-full w-full top-[0%] right-[0%] bottom-[0%] left-[0%] max-w-full overflow-hidden max-h-full object-cover"
+                class="absolute h-full w-full top-[0%] right-[0%] bottom-[0%] left-[0%] max-w-full overflow-hidden max-h-full object-cover"
                 alt="" src="/public/david.jpg" />
             </div>
-            <div class="shrink-0 flex flex-col items-start !cursor-pointer justify-center gap-[11px]">
-              <b class="relative !cursor-pointer tracking-[0.3px] leading-[27.4px]">Blogs</b>
+            <div class="shrink-0 flex flex-col items-start justify-center gap-[11px]">
+              <b class="relative tracking-[0.3px] leading-[27.4px]">Blogs</b>
             </div>
-            <div class="relative text-base tracking-[0.5px] !cursor-pointer leading-[26.44px] font-inter">
-              <p class="m-0 !cursor-pointer">My thoughts around the intersection</p>
-              <p class="m-0 !cursor-pointer">of tech and society, ranging from AI to</p>
-              <p class="m-0 !cursor-pointer">privacy and algorithmic biases.</p>
+            <div class="relative text-base tracking-[0.5px] leading-[26.44px] font-inter">
+              <p class="m-0">My thoughts around the intersection</p>
+              <p class="m-0">of tech and society, ranging from AI to</p>
+              <p class="m-0">privacy and algorithmic biases.</p>
             </div>
           </a>
         </div>
