--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
           </a>
           <a target="_blank" rel="noopener"
             class="[text-decoration:none] rounded-31xl transition-all hover:bg-whitesmoke hover:text-colors-black-100 bg-purple w-[213px] py-4 overflow-hidden shrink-0 flex flex-row items-center justify-center text-5xl text-gray-300 font-inter"
-            href="https://open.spotify.com/playlist/2BhyP3hC1RiYwadM0icNT9?si=9f1cabab73cd42e5&pt=5d8ecce1092080ce4c6dd4ee0b846235">
-            Send a song!
+            href="https://open.spotify.com/playlist/2BhyP3hC1RiYwadM0icNT9?si=e25de644b5714633">
+            Recommendations!
           </a>
         </footer>
       </main>
